--- a/static/styles.css
+++ b/static/styles.css
@@ -26,3 +26,44 @@ background: linear-gradient(to left, #ACBB78, #799F0C); /* W3C, IE 10+/ Edge, Fi
 .scrollable-content {
   width: 100%; /* Ensure the content takes up the full width of the container */
 }
+.loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top-color: #3498db;
+  border-radius: 50%;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.back-to-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  width: 40px;
+  height: 40px;
+  border: solid;
+  border-radius: 50%;
+  border-color: #19065b;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.back-to-top-btn i {
+  margin-top: 8px;
+}
